# time_value_API

./: .env.dev  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run_stored_procedure.py
migration/: env.py
migration/versions/: 1_89cecc812f66_database_init.py  2_ab9f6b0bb3f2_create_stored_procedure.py  3_2577b8c3fcf5_create_triggertime_table.py  4_3f18e5fecca6_add_trigger_to_trigger_time.py
migrations/: env.py
migrations/versions/: 71c0fa6991c4_database_init.py
src/: config.py  database.py  main.py  run_stored_procedure.py
src/auth/: base_config.py  manager.py  models.py  router.py  schemas.py
src/value/: models.py  router.py  schemas.py  service.py  sql_text.py
tests/: conftest.py  test_auth.py  test_value.py
