[tool.poetry]
name = "time-value-api"
version = "0.1.0"
description = ""
authors = ["vova2092 <vovai2092@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.28.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode="auto"